# summer21

./: .gitignore  .pre-commit-config.yaml  README.md  batch.sl  main.py  main_with_experiments_class.py  main_without_machine_learning.py  script.py  test.slurm
CSDS/: csds.py  csds_to_hf.py  sample_csds.py  xml2csds.py
CSDS-Source-and-Target/: csds-source-and-target.py
CSDS/CMU/: ._602CZL285-1.xml  ._ENRON-pearson-email-25jul02.xml  ._IZ-060316-01-Trans-1.xml  A1.E1-NEW.xml  CNN_AARONBROWN_ENG_20051101_215800.partial-NEW.xml  wsj_2465.xml
Trainer/: trainer.py
TutorialScripts/: imdb.py  script.py
conll2csds/: bert_custom.py  dataloader.py  evaluate.py  factbank2csds.py  ldc_fb.py  ldc_lu_fb.py  ldccb.py  lu_fb.py  plot.py  t5dataloader.py  train.py  tree.py
conll2csds/CSDS/: csds.py  sample_csds.py
conll2csds/bert/: bert_custom.py  evaluate.py  train.py  tree.py
conll2csds/t5_efp/: t5dataloader.py
csds2hf/: csds2hf.py
db_implementation/: db2hf.py  ddl.py  fb2master.py  fb_fixed_errors.txt  lu_to_sqlite.py  master.db  testerror.py
factbank_to_sqlite/: factbank_to_sqlite.py
factuality_bert/: user_config_template.sh
jadoch/: pyproject.toml  requirements.txt
jadoch/jadoch/core/: context.py  functional.py  slurm.py
jadoch/jadoch/data/: costep.py
jadoch/notebooks/: jadoch  nlpaug.ipynb  tutorial.ipynb
jiant/: user_config_template.sh
ldccb/: ldccb.py
lu2csds/: db2hf.py  lu2csds.py  lu2sqlite.py
owen_experiments/: csds_to_hf.py
xml2csds/: 20000415_apw_eng-New.xml  2010data.py  clean_up.sh  tyler_clean_up.sh  xml2csds.py
(+388 files in other folders)
