[tool.poetry]
name = "jadoch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.6.5"
pycountry = "^20.7.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.18"
mypy = "^0.910"
pylint = "^2.11.1"
ipython = "^7.28.0"
transformers = {extras = ["torch"], version = "^4.11.3"}
datasets = "^1.12.1"
pre-commit = "^2.15.0"
types-requests = "^2.25.9"
scikit-learn = "^1.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
